--- a/Makeover Monday Week 14/style.css
+++ b/Makeover Monday Week 14/style.css
@@ -6,5 +6,14 @@ body {
 
 #chart {
   max-width: 650px;
-  margin: 35px auto;
+  margin: 0px auto;
+}
+
+#title {
+  max-width: 650px;
+  margin: 0px auto;
+}
+
+#report-select {
+  max-width: 90px;
 }
