--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
   max-width: 650px;
   margin: 0px auto;
   font-size: 26px;
-  color: #757575;
+  color: #757575;    
+  font-weight: bold;
 }
 
 #report-select {
@@ -48,7 +49,8 @@
   font-size: 45px;
   margin: 5px auto;
   color: #9C27B0;
-  text-align: center;
+  text-align: center;    
+  font-weight: bold;
 }
 
 #footer {
